fix padding on mobile for resources page form

--- a/public/bootstrap/less/bcdevx-app.less
+++ b/public/bootstrap/less/bcdevx-app.less
@@ -220,6 +220,14 @@ body {
   }
 }
 
+// fix for padding on mobile
+.form-group {
+  input {
+    margin: 5px 0;
+  }
+}
+
+
 .ui-match {
   background-color: yellow;
 }
